タスク一覧デザイン微調整

--- a/src/main/resources/static/checkbox.css
+++ b/src/main/resources/static/checkbox.css
@@ -47,6 +47,7 @@ label:not(.circle-checkbox) input[type="checkbox"] {
     opacity: 1;
     width: auto;
     height: auto;
+    accent-color: rgb(60, 255, 0);
 }
 
 /* circle-checkbox がないときのラベルを flex 中央揃えに */
